* Makefile.in (STAGESTUFF): Remove libgcc. (stage1-start, stage2-start, stage3-start): Copy the contents of the libgcc directory explicitly. (mostlyclean): Clean libgcc.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36139 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2000-09-04  Andreas Schwab  <schwab@suse.de>
+
+	* Makefile.in (STAGESTUFF): Remove libgcc.
+	(stage1-start, stage2-start, stage3-start): Copy the contents of
+	the libgcc directory explicitly.
+	(mostlyclean): Clean libgcc.
+
 2000-09-04  Andrew Haley  <aph@redhat.com>
 
 	* dwarf2out.c: (stack_adjust_offset): New prototype.
