Forgot to add this from last commit.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36142 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,12 @@
+2000-09-04  Anthony Green  <green@redhat.com>
+
+	* java/io/File.java (deleteOnExit): New method.
+	* gnu/gcj/runtime/FileDeleter.java: New class.
+	* java/lang/natRuntime.cc (exit): Call
+	FileDeleter.deleteOnExitNow()
+	* Makefile.am: Add FileDeleter.java.
+	* Makefile.in: Rebuilt.
+
 2000-09-02  Tom Tromey  <tromey@cygnus.com>
 
 	* Makefile.in: Rebuilt.
