--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2000-09-04  Tom Tromey  <tromey@cygnus.com>
+
+	* java/util/zip/ZipFile.java (ZipFile): Delete file when opened in
+	DELETE mode.
+
 2000-09-04  Anthony Green  <green@redhat.com>
 
         Fix for PR java.io/203:
