--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,8 @@
+2000-09-04  Alex Samuel  <samuel@codesourcery.com>
+
+	* dyn-string.h: Adjust formatting. 
+	(dyn_string_insert_char): New macro.  New declaration.
+
 2000-08-28  Jason Merrill  <jason@redhat.com>
 
 	* md5.h: New file.
