* cp-demangle.c (demangle_template_arg): Eat an `E' after an 	<expression>.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36153 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,5 +1,10 @@
 2000-09-04  Alex Samuel  <samuel@codesourcery.com>
 
+	* cp-demangle.c (demangle_template_arg): Eat an `E' after an
+	<expression>. 
+	
+2000-09-04  Alex Samuel  <samuel@codesourcery.com>
+
 	* cp-demangle.c (demangle_type_ptr): Increment position past
 	pointer and reference characters.
 
