* gcse.c (hash_string_1): Add prototype. * cse.c (canon_hash_string): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36154 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-09-05  Alexandre Oliva  <aoliva@redhat.com>
+
+	* gcse.c (hash_string_1): Add prototype.
+	* cse.c (canon_hash_string): Likewise.
+
 2000-09-04  Craig Newell  <CraigN@ieee.org>
 
 	* gcc.c: Undefine "__WCHAR_TYPE__" before redefining it.
