--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-09-05  Philipp Thomas  <pthomas@suse.de>
+
+	* config.guess: Import CVS version 1.156.
+	* config.sub: Import CVS version 1.179.
+
 2000-09-02  Anthony Green  <green@cygnus.com>
 
 	* Makefile.in (all-gcc): Depend on all-zlib.
