--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-09-05  Bruce Korb  <bkorb@gnu.org>
+
+        * gcc/fixinc/fixincl.c(load_file): always read header files
+        with sizes that are a multiple of the page size.
+
 2000-09-05  Alexandre Oliva  <aoliva@redhat.com>
 
 	* gcse.c (hash_string_1): Add prototype.
