* configure.in (Cygwin): special case cygwin only when we're building cygwin, not when we're hosting cygwin.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36164 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-31  DJ Delorie  <dj@redhat.com>
+
+	* configure.in (Cygwin): special case cygwin only when we're
+	building cygwin, not when we're hosting cygwin.
+
 2000-09-04  Alex Samuel  <samuel@codesourcery.com>
 
 	* cp-demangle.c (demangle_template_arg): Eat an `E' after an
