--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,14 @@
+2000-09-05  Bryce McKinlay  <bryce@albatross.co.nz>
+
+	* java/net/natPlainDatagramSocketImpl.cc: Change various `JvThrow'
+	calls to `throw'.
+	(send): Undo last patch. 
+	Remove the label only.
+	(mcastGrp): Ditto.
+	* java/net/natPlainSocketImpl.cc: Change various `JvThrow' calls to 
+	`throw'.
+	* java/net/natInetAdress.cc: Ditto.
+
 2000-09-05  Tom Tromey  <tromey@cygnus.com>
 
 	* doc/cni.sgml: Updated from master copy.
