PAGESIZE is not portable
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36166 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -2,6 +2,7 @@
 
         * gcc/fixinc/fixincl.c(load_file): always read header files
         with sizes that are a multiple of the page size.
+	& use libiberty's getpagesize for determining that.
 
 2000-09-05  Alexandre Oliva  <aoliva@redhat.com>
 
