* config/ia64/ia64.md (mulhi3): New.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36171 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2000-09-05  Richard Henderson  <rth@cygnus.com>
 
+	* config/ia64/ia64.md (mulhi3): New.
+
+2000-09-05  Richard Henderson  <rth@cygnus.com>
+
 	* config/ia64/ia64.h (INIT_TARGET_OPTABS): Remove.
 	* config/ia64/lib1funcs.asm (__divdi3): Update from Intel IA-64
 	Optimization Guide, minimum latency alternative.
