--- a/gcc/config/ia64/ia64.md
+++ b/gcc/config/ia64/ia64.md
@@ -1316,6 +1316,21 @@
 
 ;; ::::::::::::::::::::
 ;; ::
+;; :: 16 bit Integer arithmetic
+;; ::
+;; ::::::::::::::::::::
+
+(define_insn "mulhi3"
+  [(set (match_operand:HI 0 "gr_register_operand" "=r")
+	(mult:HI (match_operand:HI 1 "gr_register_operand" "r")
+		 (match_operand:HI 2 "gr_register_operand" "r")))]
+  ""
+  "pmpy.r %0 = %1, %2"
+  [(set_attr "type" "I")])
+
+
+;; ::::::::::::::::::::
+;; ::
 ;; :: 32 bit Integer arithmetic
 ;; ::
 ;; ::::::::::::::::::::
