* config/ia64.md (movsi and movdi patterns): Allow moves from         8-bit constants to AR registers.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36172 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2000-09-05  Richard Henderson  <rth@cygnus.com>
 
+	* config/ia64.md (movsi and movdi patterns): Allow moves from
+	8-bit constants to AR registers.
+
+2000-09-05  Richard Henderson  <rth@cygnus.com>
+
 	* config/ia64/ia64.md (mulhi3): New.
 
 2000-09-05  Richard Henderson  <rth@cygnus.com>
