* config/ia64/ia64.md (mulhi3): Fix typo last change.         * config/ia64/lib1func.asm (__divdi3, __udivdi3, __umodsi3): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36174 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-09-05  Richard Henderson  <rth@cygnus.com>
+
+	* config/ia64/ia64.md (mulhi3): Fix typo last change.
+	* config/ia64/lib1func.asm (__divdi3, __udivdi3, __umodsi3): Likewise.
+
 2000-09-03  Donn Terry  <donn@interix.com>,  Laurynas Biveinis  <lauras@softhome.net>
 
 	* Makefile.in: Restructure bootstrap stages to allow clean
