--- a/gcc/config/ia64/ia64.md
+++ b/gcc/config/ia64/ia64.md
@@ -1328,7 +1328,7 @@
 	(mult:HI (match_operand:HI 1 "gr_register_operand" "r")
 		 (match_operand:HI 2 "gr_register_operand" "r")))]
   ""
-  "pmpy.r %0 = %1, %2"
+  "pmpy2.r %0 = %1, %2"
   [(set_attr "type" "I")])
 
 
