--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -6,6 +6,11 @@
 	compression_method fields.
 	* zextract.c (read_zip_archive): Collect file compression info.
 
+2000-08-11  Alexandre Petit-Bianco  <apbianco@cygnus.com>
+
+	* parse.y (do_merge_string_cste): New locals. Create new
+	STRING_CSTs each time, use memcpy. Fixes gcj/311.
+
 2000-08-07  Hans Boehm  <boehm@acm.org>
 
 	* boehm.c (mark_reference_fields): Set marking bits for all words in
