* config/ia64/lib1func.asm (__divtf3): Rebundle for Itanium.         Eliminate final copy from non-trapping case.         (__divdf3, __divsf3): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36177 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,11 @@
 2000-09-05  Richard Henderson  <rth@cygnus.com>
 
+	* config/ia64/lib1func.asm (__divtf3): Rebundle for Itanium.
+	Eliminate final copy from non-trapping case.
+	(__divdf3, __divsf3): Likewise.
+
+2000-09-05  Richard Henderson  <rth@cygnus.com>
+
 	* config/ia64/ia64.md (mulhi3): Fix typo last change.
 	* config/ia64/lib1func.asm (__divdi3, __udivdi3, __umodsi3): Likewise.
 
