2000-09-05  J. David Anglin  <dave@hiauly1.hia.nrc.ca>
	* gthr-dce.h (__gthread_objc_mutex_deallocate): Free mutex->backend.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36183 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-09-05  J. David Anglin  <dave@hiauly1.hia.nrc.ca>
+
+	* gthr-dce.h (__gthread_objc_mutex_deallocate): Free mutex->backend.
+
 2000-09-05  Jason Merrill  <jason@redhat.com>
 
 	* c-decl.c (finish_incomplete_decl): Don't call complete_array_type
