* config/i386/i386.md (call_pop): Fix test for setting         current_function_uses_pic_offset_table.         (call, call_value_pop, call_value): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36187 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -8453,9 +8453,8 @@
   /* Static functions and indirect calls don't need
      current_function_uses_pic_offset_table.  */
   if (flag_pic
-      && constant_call_address_operand (operands[0], SImode)
-      && (GET_CODE (XEXP (operands[0], 0)) != SYMBOL_REF
-	  || !SYMBOL_REF_FLAG (XEXP (operands[0], 0))))
+      && GET_CODE (XEXP (operands[0], 0)) == SYMBOL_REF
+      && ! SYMBOL_REF_FLAG (XEXP (operands[0], 0)))
     current_function_uses_pic_offset_table = 1;
   if (! call_insn_operand (XEXP (operands[0], 0), Pmode))
     XEXP (operands[0], 0) = copy_to_mode_reg (Pmode, XEXP (operands[0], 0));
@@ -8508,9 +8507,8 @@
   /* Static functions and indirect calls don't need
      current_function_uses_pic_offset_table.  */
   if (flag_pic
-      && constant_call_address_operand (operands[0], SImode)
-      && (GET_CODE (XEXP (operands[0], 0)) != SYMBOL_REF
-	  || !SYMBOL_REF_FLAG (XEXP (operands[0], 0))))
+      && GET_CODE (XEXP (operands[0], 0)) == SYMBOL_REF
+      && ! SYMBOL_REF_FLAG (XEXP (operands[0], 0)))
     current_function_uses_pic_offset_table = 1;
   if (! call_insn_operand (XEXP (operands[0], 0), Pmode))
     XEXP (operands[0], 0) = copy_to_mode_reg (Pmode, XEXP (operands[0], 0));
@@ -8570,9 +8568,8 @@
   /* Static functions and indirect calls don't need
      current_function_uses_pic_offset_table.  */
   if (flag_pic
-      && constant_call_address_operand (operands[1], SImode)
-      && (GET_CODE (XEXP (operands[1], 0)) != SYMBOL_REF
-	  || !SYMBOL_REF_FLAG (XEXP (operands[1], 0))))
+      && GET_CODE (XEXP (operands[1], 0)) == SYMBOL_REF
+      && ! SYMBOL_REF_FLAG (XEXP (operands[1], 0)))
     current_function_uses_pic_offset_table = 1;
   if (! call_insn_operand (XEXP (operands[1], 0), Pmode))
     XEXP (operands[1], 0) = copy_to_mode_reg (Pmode, XEXP (operands[1], 0));
@@ -8589,9 +8586,8 @@
   /* Static functions and indirect calls don't need
      current_function_uses_pic_offset_table.  */
   if (flag_pic
-      && constant_call_address_operand (operands[1], SImode)
-      && (GET_CODE (XEXP (operands[1], 0)) != SYMBOL_REF
-	  || !SYMBOL_REF_FLAG (XEXP (operands[1], 0))))
+      && GET_CODE (XEXP (operands[1], 0)) == SYMBOL_REF
+      && ! SYMBOL_REF_FLAG (XEXP (operands[1], 0)))
     current_function_uses_pic_offset_table = 1;
   if (! call_insn_operand (XEXP (operands[1], 0), Pmode))
     XEXP (operands[1], 0) = copy_to_mode_reg (Pmode, XEXP (operands[1], 0));
