* init.c (build_offset_ref): Deal with namespace scoped 	TEMPLATE_ID_EXPRs.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36189 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,10 @@
 2000-09-06  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* init.c (build_offset_ref): Deal with namespace scoped
+	TEMPLATE_ID_EXPRs.
+
+2000-09-06  Nathan Sidwell  <nathan@codesourcery.com>
+
 	* class.c (resolve_address_of_overloaded_function): Add
 	explanation message.
 	* decl.c (define_case_label): Reformat explanation.
