--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-09-06  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.old-deja/g++.pt/crash58.C: New test.
+
 2000-09-06  Greg McGary  <greg@mcgary.org>
 
 	* gcc.c-torture/20000906.c: New test.
